# api/openapi-spec/openapi.yaml
@@ -27,6 +27,8 @@ tags:
     description: Status progression
   - name: privileged
     description: Privileged functionality
+  - name: packages
+    description: Package overviews (global)
   - name: webhook
     description: Webhook notifications
   - name: info
@@ -1682,6 +1684,52 @@ paths:
       security:
         - BearerAuth: []
         - ApiKeyAuth: []
+  /packages/{package}/limit:
+    get:
+      tags:
+        - packages
+      summary: Obtain the current stock limit and sold units of a package
+      description: |-
+        Returns the current stock limit and sold units of a package. Only works for packages that actually have a limit.
+
+        Note: tracking of stock units is implemented as a cache for performance reasons, there are rare situations where the cache can become outdated.
+      operationId: getPackageLimit
+      parameters:
+        - name: package
+          in: path
+          description: Code of the package, as set in the service configuration
+          required: true
+          schema:
+            type: string
+            example: artshow-table
+      responses:
+        '200':
+          description: successful operation. The response body will tell you the package limit and the units sold to pending / attending registrations.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PackageCount'
+        '400':
+          description: Package is unlimited. We do not track sales stats for unlimited packages. Use the general search endpoint (and mind the performance impact).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Authorization required
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Package not found or invalid package code.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BearerAuth: []
+        - ApiKeyAuth: []
 components:
   schemas:
     AdditionalInfoFullArea:
@@ -2494,6 +2542,25 @@ components:
           format: int64
           description: The number of seconds until the countdown ends (may depend on authorization, e.g. staff may register earlier than normal users). Stays at 0 if the countdown is over.
           example: 12648
+    PackageCount:
+      type: object
+      required:
+        - pending
+        - attending
+        - limit
+      properties:
+        pending:
+          type: integer
+          description: the number of pending (status new or waiting) registrations that have this package. These registrations are counted because they are seen as having "reserved" the package.
+          example: 17
+        attending:
+          type: integer
+          description: the number of attending (status approved, partially paid, paid, checked in) registrations that have this package. These have been billed for the package, so it must be considered sold, at least for now.
+          example: 34
+        limit:
+          type: integer
+          description: the total number of stock units of this package that are available. A package can still be sold if this is greater than pending + attending.
+          example: 118
     DueDate:
       type: object
       required:
@@ -2637,6 +2704,9 @@ components:
             - ban.write.error (database error)
             - ban.id.invalid (syntactically invalid ban rule id, must be positive integer)
             - ban.id.notfound (no such ban rule id in the database)
+            - package.param.notfound (no such package or invalid package code)
+            - package.param.unlimited (this package does not have a limit, so we are not caching sales counts)
+            - package.read.error (database error)
             - search.parse.error (json body parse error)
             - search.read.error (database error)
             - status.read.error (database error)
